--- a/Manuscript/Supplementary_Information/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information/Supplementary_Information.tex
@@ -94,7 +94,7 @@ Nicholas L. Swanson-Hysell\textsuperscript{1}
 
 \linenumbers
 
-These supplementary information materials provide details on the model framework used in this study. Code associated with this study can be found at: \url{https://github.com/Swanson-Hysell-Group/GEOCLIM_Modern}.
+These supplementary information materials provide details on the model framework used in this study. The code for the GEOCLIM model used in this study can be found at: \url{https://github.com/piermafrost/GEOCLIM-dynsoil-steady-state}. The code that generated the inputs and analyzed the output of the GEOCLIM model can be found at: \url{https://github.com/Swanson-Hysell-Group/GEOCLIM_Modern}.
 
 \section*{Silicate Weathering Component}
 
@@ -259,9 +259,11 @@ The Ca+Mg concentrations of felsic (1,521~mol/m$^{3}$), intermediate (4,759~mol/
     \label{fig:weathering_regolith_maps}
 \end{figure}
 
-Experimental determinations of the activation energy ($E_a$; Equations \ref{eq:8} and \ref{eq:9}) associated with the weathering of silicate minerals are variable \citep{Brantley2003a}. However, multiple efforts to invert for $E_a$ in basaltic watersheds with varying temperature have yielded values (41.6 $\pm$ 3.2~kJ/mol in \citealp{Li2016a}; 42.3~kJ/mol in \citealp{Dessert2001a}) that are consistent with the lower end of activation energies of Ca+Mg bearing minerals in laboratory experiments such as that for diopside (40.5 $\pm$ 1.7~kJ/mol; \citealp{Knauss1993a}) and for labradorite (42.1~kJ/mol; \citealp{Carroll2005a}). We use the value of 42~kJ/mol in our model runs. While we implement lithology-dependent Ca+Mg concentration, our implementation does not include lithology-dependent kinetics of mineral dissolution. Relative to felsic lithologies, mafic lithologies contain a higher concentration of minerals with faster dissolution kinetics (e.g. plagioclase). However, Ca+Mg from both felsic and mafic lithologies is predominantly sourced from minerals with faster dissolution kinetics, and we therefore use the same chemical weathering formulation (including the same activation energy) across lithologies.
+Experimental determinations of the activation energy ($E_a$; Equations \ref{eq:6} and \ref{eq:9}) associated with the weathering of silicate minerals are variable \citep{Brantley2003a}. However, multiple efforts to invert for $E_a$ in basaltic watersheds with varying temperature have yielded values (41.6 $\pm$ 3.2~kJ/mol in \citealp{Li2016a}; 42.3~kJ/mol in \citealp{Dessert2001a}) that are consistent with the lower end of activation energies of Ca+Mg bearing minerals in laboratory experiments such as that for diopside (40.5 $\pm$ 1.7~kJ/mol; \citealp{Knauss1993a}) and for labradorite (42.1~kJ/mol; \citealp{Carroll2005a}). We use the value of 42~kJ/mol in our model runs. While we implement lithology-dependent Ca+Mg concentration, our implementation does not include lithology-dependent kinetics of mineral dissolution. Relative to felsic lithologies, mafic lithologies contain a higher concentration of minerals with faster dissolution kinetics (e.g. plagioclase). However, Ca+Mg from both felsic and mafic lithologies is predominantly sourced from minerals with faster dissolution kinetics, and we therefore use the same chemical weathering formulation (including the same activation energy) across lithologies.
 
-Within the equations that govern the silicate weathering component of GEOCLIM, we identify the less constrained parameters: the proportionality constant that modifies the dependence of dissolution rate on runoff and temperature ($k_{d}$; Equation \ref{eq:9}), the proportionality constant that modifies the dependence of dissolution rate on runoff only ($k_{w}$; Equation \ref{eq:9}), the power constant that modifies the dependence of dissolution rate on the time that a rock particle has spent in the regolith ($\sigma$; Equation \ref{eq:4}), and the proportionality constant that modifies the dependence of regolith production on runoff and temperature ($k_{rp}$; Equation \ref{eq:8}). Furthermore, the Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are also difficult to define. We therefore allow these parameters to vary within reasonable bounds during the calibration stage of GEOCLIM. In total, we test 78,000 unique parameter combinations (Fig. \ref{fig:r2_cross_plot}; Table \ref{tab:parameter_combinations}).
+Within the equation that governs the physical erosion rate in GEOCLIM (Equation \ref{eq:8}), the values of the exponents ($m=0.5$ and $n=1$) are supported by compilations \citep{Lague2013a}. However, there is uncertainty in the value of the proportionality constant ($k_e$). We therefore tune this value such that the total erosion flux in the model under present-day slope and runoff conditions (see below) matches the total erosion flux estimated in \citet{Milliman2013a} ($20\times10^{12}$~kg/yr). Assuming that the density of eroded materials is 2500~kg/m$^{3}$, our tuned $k_e$ value is 0.0029110~m$^{1-m}$/yr$^{1-m}$. This value is only dependent on the spatially-resolved land area, runoff, and slope.
+
+Within the equations that govern the chemical weathering rate in GEOCLIM, we identify the less constrained parameters: the proportionality constant that modifies the dependence of dissolution rate on runoff and temperature ($k_{d}$; Equation \ref{eq:9}), the proportionality constant that modifies the dependence of dissolution rate on runoff only ($k_{w}$; Equation \ref{eq:9}), the power constant that modifies the dependence of dissolution rate on the time that a rock particle has spent in the regolith ($\sigma$; Equation \ref{eq:4}), and the proportionality constant that modifies the dependence of regolith production on runoff and temperature ($k_{rp}$; Equation \ref{eq:8}). Furthermore, the Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are also difficult to define. We therefore allow these parameters to vary within reasonable bounds during the calibration stage of GEOCLIM. In total, we test 78,000 unique parameter combinations (Fig. \ref{fig:r2_cross_plot}; Table \ref{tab:parameter_combinations}).
 
 \begin{table}[h!]
 \begin{center}
@@ -308,7 +310,9 @@ Each parameter combination predicts a different total \COtwo consumption that sh
 
 \section*{Climate Model}
 
-For the climate model component of GEOCLIM, we use temperature and runoff fields from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; available for download at \url{https://nomads.gfdl.noaa.gov/dods-data/gfdl_cm2_0/}) These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at 2.0\degrees $\times$ 2.5\degrees resolution. In the ``1860 control'' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the ``+1\%/yr to 2$\times$'' experiment, initial conditions are taken from the ``1860 control'' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The ``+1\%/yr to 4$\times$'' experiment is identical to the ``+1\%/yr to 2$\times$'' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. \pCOtwo is then held constant for 160 years. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm respectively. Temperature and runoff fields associated with \pCOtwo values between the three modeled \pCOtwo levels (286, 572, and 1144~ppm) are obtained through linear interpolation between the model results. Given that precipitation in SEAI is primarily driven by large-scale convective upwelling leading to high precipitation over both land and water, the current approach is a reasonable approximation for this region. However, for paleogeographic change that would have very significantly modified precipitation over broad swathes of land such as growth of the Himalaya, this approach of using modern climate model results is not viable.
+For the climate model component of GEOCLIM, we use temperature and runoff fields from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; available for download at \url{https://nomads.gfdl.noaa.gov/dods-data/gfdl_cm2_0/}) These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at 2.0\degrees $\times$ 2.5\degrees resolution. In the ``1860 control'' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the ``+1\%/yr to 2$\times$'' experiment, initial conditions are taken from the ``1860 control'' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The ``+1\%/yr to 4$\times$'' experiment is identical to the ``+1\%/yr to 2$\times$'' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. \pCOtwo is then held constant for 160 years. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm respectively. Temperature and runoff fields associated with \pCOtwo values between the three modeled \pCOtwo levels (286, 572, and 1144~ppm) are obtained through linear interpolation between the model results.
+
+Given that precipitation in SEAI is primarily driven by large-scale convective upwelling leading to high precipitation over both land and water \citep{Donohoe2017a}, the current approach of using a climate model forced by modern paleogeography for all SEAI scenarios is a reasonable approximation for this region. However, for paleogeographic change that would have very significantly modified precipitation over broad swathes of land such as growth of the Himalaya, this approach of using modern climate model results is not viable. The climate model also assumes the present-day extent of ice-sheets for all \pCOtwo levels. However, without ice-sheets, the global climate would be warmer for a given \pCOtwo (hysteresis loop; \citealp{Pollard2005b}), but the amount of emergent land would be lower. We expect this bias to be minimal, as all of our \pCOtwo estimates fall below the glaciation threshold for Antarctica.
 
 \section*{Southeast Asian Islands Scenarios}
 
