Updates from Overleaf

--- a/Manuscript/Supplementary_Information/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information/Supplementary_Information.tex
@@ -261,9 +261,9 @@ The Ca+Mg concentrations of felsic (1,521~mol/m$^{3}$), intermediate (4,759~mol/
 
 Experimental determinations of the activation energy ($E_a$; Equations \ref{eq:6} and \ref{eq:9}) associated with the weathering of silicate minerals are variable \citep{Brantley2003a}. However, multiple efforts to invert for $E_a$ in basaltic watersheds with varying temperature have yielded values (41.6 $\pm$ 3.2~kJ/mol in \citealp{Li2016a}; 42.3~kJ/mol in \citealp{Dessert2001a}) that are consistent with the lower end of activation energies of Ca+Mg bearing minerals in laboratory experiments such as that for diopside (40.5 $\pm$ 1.7~kJ/mol; \citealp{Knauss1993a}) and for labradorite (42.1~kJ/mol; \citealp{Carroll2005a}). We use the value of 42~kJ/mol in our model runs. While we implement lithology-dependent Ca+Mg concentration, our implementation does not include lithology-dependent kinetics of mineral dissolution. Relative to felsic lithologies, mafic lithologies contain a higher concentration of minerals with faster dissolution kinetics (e.g. plagioclase). However, Ca+Mg from both felsic and mafic lithologies is predominantly sourced from minerals with faster dissolution kinetics, and we therefore use the same chemical weathering formulation (including the same activation energy) across lithologies.
 
-Within the equation that governs the physical erosion rate in GEOCLIM (Equation \ref{eq:8}), the values of the exponents ($m=0.5$ and $n=1$) are supported by compilations \citep{Lague2013a}. However, there is uncertainty in the value of the proportionality constant ($k_e$). We therefore tune this value such that the total erosion flux in the model under present-day slope and runoff conditions (see below) matches the total erosion flux estimated in \citet{Milliman2013a} ($20\times10^{12}$~kg/yr). Assuming that the density of eroded materials is 2500~kg/m$^{3}$, our tuned $k_e$ value is 0.0029110~m$^{1-m}$/yr$^{1-m}$. This value is only dependent on the spatially-resolved land area, runoff, and slope.
+Within the equation that governs the physical erosion rate in GEOCLIM (Equation \ref{eq:8}), the values of the exponents ($m=0.5$ and $n=1$) are supported by compilations \citep{Lague2013a}. However, there is uncertainty in the value of the proportionality constant ($k_e$). We therefore tune this value such that the total erosion flux in the model under present-day slope and runoff conditions (see below) matches the total erosion flux estimated in \citet{Milliman2013a} ($20\times10^{12}$~kg/yr). Assuming that the density of eroded materials is 2500~kg/m$^{3}$, our tuned $k_e$ value is 0.0029110~m$^{1-m}$/yr$^{1-m}$.
 
-Within the equations that govern the chemical weathering rate in GEOCLIM, we identify the less constrained parameters: the proportionality constant that modifies the dependence of dissolution rate on runoff and temperature ($k_{d}$; Equation \ref{eq:9}), the proportionality constant that modifies the dependence of dissolution rate on runoff only ($k_{w}$; Equation \ref{eq:9}), the power constant that modifies the dependence of dissolution rate on the time that a rock particle has spent in the regolith ($\sigma$; Equation \ref{eq:4}), and the proportionality constant that modifies the dependence of regolith production on runoff and temperature ($k_{rp}$; Equation \ref{eq:8}). Furthermore, the Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are also difficult to define. We therefore allow these parameters to vary within reasonable bounds during the calibration stage of GEOCLIM. In total, we test 78,000 unique parameter combinations (Fig. \ref{fig:r2_cross_plot}; Table \ref{tab:parameter_combinations}).
+Within the equations that govern the chemical weathering rate in GEOCLIM, we identify the less constrained parameters: the proportionality constant that modifies the dependence of dissolution rate on runoff and temperature ($k_{d}$; Equation \ref{eq:9}), the proportionality constant that modifies the dependence of dissolution rate on runoff only ($k_{w}$; Equation \ref{eq:9}), the power constant that modifies the dependence of dissolution rate on the time that a rock particle has spent in the regolith ($\sigma$; Equation \ref{eq:4}), and the proportionality constant that modifies the dependence of regolith production on runoff and temperature ($k_{rp}$; Equation \ref{eq:6}). Furthermore, the Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are also difficult to define. We therefore allow these parameters to vary within reasonable bounds during the calibration stage of GEOCLIM. In total, we test 78,000 unique parameter combinations (Fig. \ref{fig:r2_cross_plot}; Table \ref{tab:parameter_combinations}).
 
 \begin{table}[h!]
 \begin{center}
