Updates from Overleaf

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -1,15 +1,20 @@
-% Letters
-% Letters are short reports of original research focused on an outstanding finding whose importance means that it will be of interest to scientists in other fields.
+% more detailed formatting: https://www.sciencemag.org/authors/instructions-preparing-initial-manuscript
+% formatting: https://www.sciencemag.org/authors/science-information-authors
+% submit at: https://cts.sciencemag.org/
 
-% They do not normally exceed 4 pages of Nature and, as a guideline, allow up to 30 references. They begin with a fully referenced paragraph, ideally of about 200 words, but certainly no more than 300 words, aimed at readers in other disciplines. This paragraph starts with a 2-3 sentence basic introduction to the field; followed by a one-sentence statement of the main conclusions starting 'Here we show' or equivalent phrase; and finally, 2-3 sentences putting the main findings into general context so it is clear how the results described in the paper have moved the field forwards.
+% Reports (up to ~2500 words including references, notes and captions–corresponds to ~3 printed pages in the journal) present important new research results of broad significance. Reports should include an abstract, an introductory paragraph, up to four figures or tables, and about 30 references. Materials and Methods should be included in supplementary materials, which should also include information needed to support the paper's conclusions.
 
-% Please refer to our annotated example to see how the summary paragraph for a Letter should be constructed.
+% Titles should be no more than 96 characters (including spaces).
 
-% The rest of the text is typically about 1,500 words long. Any discussion at the end of the text should be as succinct as possible, not repeating previous summary/introduction material, to briefly convey the general relevance of the work.
+% Short titles should be no more than 40 characters (including spaces).
 
-% Letters typically have 3 or 4 small display items (figures or tables).
+% One-sentence summaries capturing the most important point should be submitted for Research Articles, Reports and Reviews. These should be a maximum of 125 characters and should complement rather than repeat the title
 
-% Word counts refer to the text of the paper. References, title, author list and acknowledgements do not have to be included in total word counts.
+% Abstracts of Research Articles and Reports should explain to the general reader why the research was done, what was found and why the results are important. They should start with some brief BACKGROUND information: a sentence giving a broad introduction to the field comprehensible to the general reader, and then a sentence of more detailed background specific to your study. This should be followed by an explanation of the OBJECTIVES/METHODS and then the RESULTS. The final sentence should outline the main CONCLUSIONS of the study, in terms that will be comprehensible to all our readers. The Abstract is distinct from the main body of the text, and thus should not be the only source of background information critical to understanding the manuscript. Please do not include citations or abbreviations in the Abstract. The abstract should be 125 words or less.
+
+% Main Text is not divided into sub-headings for Reports. Subheadings are used only in Research Articles, and Reviews.
+
+% References and Notes are numbered in the order in which they are cited, first through the text, then through the figure and table legends and finally through Supplementary Materials.
 
 \documentclass[11pt,letterpaper]{article}
 
@@ -98,7 +103,17 @@ Nicholas L. Swanson-Hysell\textsuperscript{1}
 
 \linenumbers
 
-The Southeast Asian islands (SEAI) have an out-sized contribution to modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \cite{Gaillardet1999a}. There has been a significant increase of subaerially-exposed land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda arc system \cite{Molnar2015a, Macdonald2019a}. Concurrently, after the Miocene Climatic Optimum, a cooling trend began ca. 15~Ma and accelerated over the past 4 million years (m.y.) culminating with the onset of Northern Hemisphere glaciation \cite{Zachos2001a}. Many hypotheses have been proposed to explain this cooling trend including changes in ocean/atmosphere circulation \cite{Haug1998a, Shevenell2004a, Molnar2015a}, a decrease in volcanic outgassing \cite{Berner1983a}, or uplift in the Himalaya \cite{Raymo1992a}. Here we use geologic data to reconstruct the shorelines of SEAI over the past 15~m.y. (Fig. \ref{fig:shoreline_growth}) and quantify the increase in land area. We use these paleoshorelines as boundary conditions within a coupled weathering-climate model to quantify the change in steady-state \pCOtwo associated with SEAI emergence (Fig. \ref{fig:scenario_pCO2}). We find that the modeled decrease in \pCOtwo due to these paleogeographic changes is sufficient to explain long-term climatic cooling over the Neogene.
+\noindent
+% MAXIMUM 125 CHARACTERS 
+\textbf{One Sentence Summary:} Arc-continent collision in the Southeast Asian islands increased global weatherability enough to drive Neogene cooling.
+
+% MAXIMUM 125 WORDS
+% NO CITATIONS OR ABBREVIATIONS
+\begin{abstract}
+The Southeast Asian islands bring together steep topography, a tropical climate, and mafic lithologies to efficiently weather rocks in the region and consume large amounts of \COtwo. Concurrent with global cooling since the mid-Miocene, ongoing arc-continent collision has led to a significant increase of subaerially-exposed land area in the region. Here we use geologic data to reconstruct the shorelines of the Southeast Asian islands over the past 15 million years and quantify the increase in land area. We use these paleoshorelines as boundary conditions within a coupled weathering-climate model to quantify the change in steady-state \pCOtwo associated with this emergence. We find that the modeled decrease in \pCOtwo due to these paleogeographic changes is sufficient to explain long-term climatic cooling over the Neogene.
+\end{abstract}
+
+The Southeast Asian islands (SEAI) have an out-sized contribution to modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \cite{Gaillardet1999a}. There has been a significant increase of subaerially-exposed land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda arc system \cite{Molnar2015a, Macdonald2019a}. Concurrently, after the Miocene Climatic Optimum, a cooling trend began ca. 15~Ma and accelerated over the past 4 million years (m.y.) culminating with the onset of Northern Hemisphere glaciation \cite{Zachos2001a}. Many hypotheses have been proposed to explain this cooling trend including changes in ocean/atmosphere circulation \cite{Haug1998a, Shevenell2004a, Molnar2015a}, a decrease in volcanic outgassing \cite{Berner1983a}, or uplift in the Himalaya \cite{Raymo1992a}. Here we instead propose that SEAI emergence was itself sufficient to explain long-term climatic cooling over the Neogene.
 
 Over geologic time-scales, \COtwo enters Earth's ocean--atmosphere system primarily via volcanism and metamorphic degassing, and leaves primarily through the chemical weathering of silicate rocks, with a smaller sink through organic carbon burial \cite{Kump1997a}. Chemical weathering delivers alkalinity and cations to the ocean which drives carbon sequestration through carbonate precipitation. Steady-state \pCOtwo is set at the \pCOtwo level at which \COtwo sinks are equal to sources. As \COtwo sinks are removed and \pCOtwo rises, temperature increases and the hydrological cycle is invigorated, causing other weathering sinks to increase until a new steady-state is achieved at higher \pCOtwo \cite{Kump1997a}. Conversely, as regions with high carbon sequestration potential emerge on Earth's surface, \pCOtwo decreases resulting in other weathering sinks to diminish leading to a new lower steady-state \pCOtwo concentration.
 
@@ -137,6 +152,7 @@ Collaborative research between NLS-H and YG was initially supported by a grant f
 
 \section*{FIGURES}
 
+% 70 words
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.9\textwidth]{Figures/shoreline_growth.pdf}
@@ -144,6 +160,7 @@ Collaborative research between NLS-H and YG was initially supported by a grant f
     \label{fig:shoreline_growth}
 \end{figure}
 
+% 100 words
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Figures/scenario_pCO2.pdf}
