--- a/Manuscript/Supplementary_Information/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information/Supplementary_Information.tex
@@ -12,14 +12,13 @@
 \usepackage{color}
 \usepackage{natbib}
 \usepackage{setspace}
-\usepackage{}
 \usepackage{fancyhdr}
 \usepackage{graphicx}
 \usepackage{xspace}
 \usepackage{threeparttable}
 \usepackage{color,colortbl}
 \usepackage{url}
-%\usepackage[hidelinks]{hyperref}
+\usepackage[hidelinks]{hyperref}
 \urlstyle{same}
 \doublespacing
 
@@ -410,7 +409,7 @@ Exhumation of the modern Sunda-Banda Arc is the result of ongoing arc-continent 
 
 \newpage
 
-\bibliographystyle{gsabull}
-\bibliography{References}
+\bibliographystyle{Manuscript/nature.bst}
+\bibliography{Manuscript/References.bib}
 
 \end{document}
